samples/_failures_safe/1761365311_780678_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d055be6a.c: In function ‘main’:
./samples/SAFE/__tmp_d055be6a.c:182:16: error: missing terminating " character
  182 |         printf("%-12s %-12s %-8d %-8d\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d055be6a.c:182:9: error: expected expression at end of input
  182 |         printf("%-12s %-12s %-8d %-8d\n
      |         ^~~~~~
./samples/SAFE/__tmp_d055be6a.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d055be6a.c:182:9: error: expected declaration or statement at end of input
